[gd_scene load_steps=18 format=3 uid="uid://dqsijr0ryq4s1"]

[ext_resource type="Script" path="res://RegexmonPartyScreen.gd" id="1_5gy2n"]
[ext_resource type="Texture2D" uid="uid://2uvkvacmm6mc" path="res://Assets/UI/Pokemon Party/party_background.png" id="1_mdlki"]
[ext_resource type="Texture2D" uid="uid://ck7ovkca3j8hb" path="res://Assets/UI/Pokemon Party/main_pokemon_background.png" id="2_72ov6"]
[ext_resource type="Texture2D" uid="uid://cx78ahacvjgf2" path="res://Assets/Pokemon/Charmander.png" id="3_0q77l"]
[ext_resource type="FontFile" uid="uid://bi4pfinmax1fa" path="res://Assets/UI/pkmnfl.ttf" id="4_68cde"]
[ext_resource type="Texture2D" uid="uid://dqof6m3bqjmsu" path="res://Assets/UI/Pokemon Party/gender_icons.png" id="5_eqtsx"]
[ext_resource type="Texture2D" uid="uid://bsl8yy73ilpwf" path="res://Assets/UI/Pokemon Party/healthbar.png" id="6_cu8st"]
[ext_resource type="Texture2D" uid="uid://cqnxtpt1qoh5e" path="res://Assets/UI/Pokemon Party/standby_pokemon_background.png" id="7_qwe58"]
[ext_resource type="Texture2D" uid="uid://c5wgy22t68g2n" path="res://Assets/Pokemon/Bulbasaur.png" id="8_ox2p4"]
[ext_resource type="Texture2D" uid="uid://mklfxoet80eu" path="res://Assets/Pokemon/Pokemon30.png" id="9_uqhwg"]
[ext_resource type="Texture2D" uid="uid://du84ht8w1qnhi" path="res://Assets/Pokemon/Pikachu.png" id="10_ij565"]
[ext_resource type="Texture2D" uid="uid://crohu0nvmtw66" path="res://Assets/Pokemon/Pidgey.png" id="11_8vn3g"]
[ext_resource type="Texture2D" uid="uid://cvpjnxpy20on6" path="res://Assets/Pokemon/Pokemon20.png" id="12_bxt0x"]
[ext_resource type="Texture2D" uid="uid://bgmil746e0il8" path="res://Assets/UI/Pokemon Party/exit_background_button.png" id="13_ghx3m"]

[sub_resource type="Animation" id="Animation_8sc4f"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegexmonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_wt4gn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RegexmonPartySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc8y1"]
_data = {
"Idle": SubResource("Animation_8sc4f"),
"RESET": SubResource("Animation_wt4gn")
}

[node name="RegexmonPartyScreen" type="Node2D"]
script = ExtResource("1_5gy2n")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_mdlki")

[node name="FirstRegexmonSlot" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="FirstRegexmonSlot"]
position = Vector2(44, 47)
texture = ExtResource("2_72ov6")
hframes = 2

[node name="RegexmonPartySprite" type="Sprite2D" parent="FirstRegexmonSlot"]
position = Vector2(16, 37)
texture = ExtResource("3_0q77l")
hframes = 2
region_enabled = true
region_rect = Rect2(30, 10, 63, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FirstRegexmonSlot"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_jc8y1")
}

[node name="RegexmonName" type="Sprite2D" parent="FirstRegexmonSlot"]
position = Vector2(57, 43)
texture = ExtResource("3_0q77l")
region_enabled = true
region_rect = Rect2(0, 0, 51.808, 9.702)

[node name="LevelLabel" type="Label" parent="FirstRegexmonSlot"]
offset_left = 48.0
offset_top = 49.0
offset_right = 73.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "4"

[node name="HealthLabel" type="Label" parent="FirstRegexmonSlot"]
offset_left = 50.0
offset_top = 65.0
offset_right = 61.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "23"

[node name="MaxHealthLabel" type="Label" parent="FirstRegexmonSlot"]
offset_left = 67.0
offset_top = 65.0
offset_right = 78.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "30"

[node name="GenderIcon" type="Sprite2D" parent="FirstRegexmonSlot"]
position = Vector2(72, 52)
texture = ExtResource("5_eqtsx")
hframes = 2

[node name="HealthBar" type="Sprite2D" parent="FirstRegexmonSlot"]
position = Vector2(56, 61)
scale = Vector2(2, 1)
texture = ExtResource("6_cu8st")
region_enabled = true
region_rect = Rect2(24, 0, 24, 3)

[node name="SecondRegexmonSlot" type="Node2D" parent="."]
position = Vector2(119, -26)

[node name="Background" type="Sprite2D" parent="SecondRegexmonSlot"]
position = Vector2(44, 47)
texture = ExtResource("7_qwe58")
hframes = 2

[node name="RegexmonPartySprite" type="Sprite2D" parent="SecondRegexmonSlot"]
position = Vector2(-15, 47)
texture = ExtResource("8_ox2p4")
hframes = 2
region_enabled = true
region_rect = Rect2(30, 10, 63, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SecondRegexmonSlot"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_jc8y1")
}

[node name="RegexmonName" type="Sprite2D" parent="SecondRegexmonSlot"]
position = Vector2(24, 45)
texture = ExtResource("8_ox2p4")
region_enabled = true
region_rect = Rect2(0, 0, 51.808, 9.702)

[node name="LevelLabel" type="Label" parent="SecondRegexmonSlot"]
offset_left = 17.0
offset_top = 51.0
offset_right = 42.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "4"

[node name="HealthLabel" type="Label" parent="SecondRegexmonSlot"]
offset_left = 84.0
offset_top = 51.0
offset_right = 95.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "23"

[node name="MaxHealthLabel" type="Label" parent="SecondRegexmonSlot"]
offset_left = 100.0
offset_top = 51.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "30"

[node name="GenderIcon" type="Sprite2D" parent="SecondRegexmonSlot"]
position = Vector2(44, 54)
texture = ExtResource("5_eqtsx")
hframes = 2

[node name="HealthBar" type="Sprite2D" parent="SecondRegexmonSlot"]
position = Vector2(89, 46)
scale = Vector2(2, 1)
texture = ExtResource("6_cu8st")
region_enabled = true
region_rect = Rect2(24, 0, 24, 3)

[node name="ThirdRegexmonSlot" type="Node2D" parent="."]
position = Vector2(119, -2)

[node name="Background" type="Sprite2D" parent="ThirdRegexmonSlot"]
position = Vector2(44, 47)
texture = ExtResource("7_qwe58")
hframes = 2

[node name="RegexmonPartySprite" type="Sprite2D" parent="ThirdRegexmonSlot"]
position = Vector2(-15, 47)
texture = ExtResource("9_uqhwg")
hframes = 2
region_enabled = true
region_rect = Rect2(30, 10, 63, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="ThirdRegexmonSlot"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_jc8y1")
}

[node name="RegexmonName" type="Sprite2D" parent="ThirdRegexmonSlot"]
position = Vector2(24, 45)
texture = ExtResource("9_uqhwg")
region_enabled = true
region_rect = Rect2(0, 0, 51.808, 9.702)

[node name="LevelLabel" type="Label" parent="ThirdRegexmonSlot"]
offset_left = 17.0
offset_top = 51.0
offset_right = 42.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "4"

[node name="HealthLabel" type="Label" parent="ThirdRegexmonSlot"]
offset_left = 84.0
offset_top = 51.0
offset_right = 95.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "23"

[node name="MaxHealthLabel" type="Label" parent="ThirdRegexmonSlot"]
offset_left = 100.0
offset_top = 51.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "30"

[node name="GenderIcon" type="Sprite2D" parent="ThirdRegexmonSlot"]
position = Vector2(44, 54)
texture = ExtResource("5_eqtsx")
hframes = 2

[node name="HealthBar" type="Sprite2D" parent="ThirdRegexmonSlot"]
position = Vector2(89, 46)
scale = Vector2(2, 1)
texture = ExtResource("6_cu8st")
region_enabled = true
region_rect = Rect2(24, 0, 24, 3)

[node name="FourthRegexmonSlot" type="Node2D" parent="."]
position = Vector2(119, 22)

[node name="Background" type="Sprite2D" parent="FourthRegexmonSlot"]
position = Vector2(44, 47)
texture = ExtResource("7_qwe58")
hframes = 2

[node name="RegexmonPartySprite" type="Sprite2D" parent="FourthRegexmonSlot"]
position = Vector2(-15, 47)
texture = ExtResource("10_ij565")
hframes = 2
region_enabled = true
region_rect = Rect2(30, 10, 63, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FourthRegexmonSlot"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_jc8y1")
}

[node name="RegexmonName" type="Sprite2D" parent="FourthRegexmonSlot"]
position = Vector2(24, 45)
texture = ExtResource("10_ij565")
region_enabled = true
region_rect = Rect2(0, 0, 51.808, 9.702)

[node name="LevelLabel" type="Label" parent="FourthRegexmonSlot"]
offset_left = 17.0
offset_top = 51.0
offset_right = 42.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "4"

[node name="HealthLabel" type="Label" parent="FourthRegexmonSlot"]
offset_left = 84.0
offset_top = 51.0
offset_right = 95.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "23"

[node name="MaxHealthLabel" type="Label" parent="FourthRegexmonSlot"]
offset_left = 100.0
offset_top = 51.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "30"

[node name="GenderIcon" type="Sprite2D" parent="FourthRegexmonSlot"]
position = Vector2(44, 54)
texture = ExtResource("5_eqtsx")
hframes = 2

[node name="HealthBar" type="Sprite2D" parent="FourthRegexmonSlot"]
position = Vector2(89, 46)
scale = Vector2(2, 1)
texture = ExtResource("6_cu8st")
region_enabled = true
region_rect = Rect2(24, 0, 24, 3)

[node name="FifthRegexmonSlot" type="Node2D" parent="."]
position = Vector2(119, 46)

[node name="Background" type="Sprite2D" parent="FifthRegexmonSlot"]
position = Vector2(44, 47)
texture = ExtResource("7_qwe58")
hframes = 2

[node name="RegexmonPartySprite" type="Sprite2D" parent="FifthRegexmonSlot"]
position = Vector2(-15, 47)
texture = ExtResource("11_8vn3g")
hframes = 2
region_enabled = true
region_rect = Rect2(30, 10, 63, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="FifthRegexmonSlot"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_jc8y1")
}

[node name="RegexmonName" type="Sprite2D" parent="FifthRegexmonSlot"]
position = Vector2(24, 45)
texture = ExtResource("11_8vn3g")
region_enabled = true
region_rect = Rect2(0, 0, 51.808, 9.702)

[node name="LevelLabel" type="Label" parent="FifthRegexmonSlot"]
offset_left = 17.0
offset_top = 51.0
offset_right = 42.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "4"

[node name="HealthLabel" type="Label" parent="FifthRegexmonSlot"]
offset_left = 84.0
offset_top = 51.0
offset_right = 95.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "23"

[node name="MaxHealthLabel" type="Label" parent="FifthRegexmonSlot"]
offset_left = 100.0
offset_top = 51.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "30"

[node name="GenderIcon" type="Sprite2D" parent="FifthRegexmonSlot"]
position = Vector2(44, 54)
texture = ExtResource("5_eqtsx")
hframes = 2

[node name="HealthBar" type="Sprite2D" parent="FifthRegexmonSlot"]
position = Vector2(89, 46)
scale = Vector2(2, 1)
texture = ExtResource("6_cu8st")
region_enabled = true
region_rect = Rect2(24, 0, 24, 3)

[node name="SixthRegexmonSlot" type="Node2D" parent="."]
position = Vector2(119, 70)

[node name="Background" type="Sprite2D" parent="SixthRegexmonSlot"]
position = Vector2(44, 47)
texture = ExtResource("7_qwe58")
hframes = 2

[node name="RegexmonPartySprite" type="Sprite2D" parent="SixthRegexmonSlot"]
position = Vector2(-15, 47)
texture = ExtResource("12_bxt0x")
hframes = 2
region_enabled = true
region_rect = Rect2(30, 10, 63, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="SixthRegexmonSlot"]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_jc8y1")
}

[node name="RegexmonName" type="Sprite2D" parent="SixthRegexmonSlot"]
position = Vector2(24, 45)
texture = ExtResource("12_bxt0x")
region_enabled = true
region_rect = Rect2(0, 0, 51.808, 9.702)

[node name="LevelLabel" type="Label" parent="SixthRegexmonSlot"]
offset_left = 17.0
offset_top = 51.0
offset_right = 42.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "4"

[node name="HealthLabel" type="Label" parent="SixthRegexmonSlot"]
offset_left = 84.0
offset_top = 51.0
offset_right = 95.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "23"

[node name="MaxHealthLabel" type="Label" parent="SixthRegexmonSlot"]
offset_left = 100.0
offset_top = 51.0
offset_right = 111.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("4_68cde")
theme_override_font_sizes/font_size = 10
text = "30"

[node name="GenderIcon" type="Sprite2D" parent="SixthRegexmonSlot"]
position = Vector2(44, 54)
texture = ExtResource("5_eqtsx")
hframes = 2

[node name="HealthBar" type="Sprite2D" parent="SixthRegexmonSlot"]
position = Vector2(89, 46)
scale = Vector2(2, 1)
texture = ExtResource("6_cu8st")
region_enabled = true
region_rect = Rect2(24, 0, 24, 3)

[node name="CancelSprite" type="Sprite2D" parent="."]
position = Vector2(213, 144)
texture = ExtResource("13_ghx3m")
hframes = 2
